adds carousel text

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         >
       </nav>
       <div id="carousel">
+        <div id="text">Shop Our Furby Chains <button>Shop Now</button></div>
         <img src="images/carousel_furby.png" />
       </div>
       <div id="featured_items">
