--- a/index.html
+++ b/index.html
@@ -55,7 +55,84 @@
           <img src="images/item-5.png" />
         </div>
       </div>
-      <div id="offers"></div>
+      <div id="offers">
+        <div id="offerWrap">
+          <div class="offerCard">
+            <svg
+              width="48"
+              height="48"
+              viewBox="0 0 48 48"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle
+                cx="24"
+                cy="24"
+                r="23"
+                stroke="#636162"
+                stroke-width="2"
+              />
+              <path
+                d="M11 24.5L19.5 33L37.5 15"
+                stroke="#636162"
+                stroke-width="2"
+              />
+            </svg>
+            Guaranteed Quality
+            <p>We use only the highest-quality, uncut gems.</p>
+          </div>
+          <div class="offerCard">
+            <svg
+              width="48"
+              height="48"
+              viewBox="0 0 48 48"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle
+                cx="24"
+                cy="24"
+                r="23"
+                stroke="#636162"
+                stroke-width="2"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M25 21H34.0985L25 34.0645L25 21ZM23 21H13.9015L23 34.0645L23 21ZM29.7324 14.2677L33.4235 19H25.0001L29.7324 14.2677ZM24 17.1716L27.1716 14H20.8284L24 17.1716ZM14.3796 19H22.9999L18 14L18 14H17.8896L14.3796 19ZM37 20.3333L30.5 12H16.85L11 20.3333L24 39L37 20.3333Z"
+                fill="#636162"
+              />
+            </svg>
+
+            Free Cleaning
+            <p>We'll clean your jewelry while you browse - for free.</p>
+          </div>
+          <div class="offerCard">
+            <svg
+              width="48"
+              height="48"
+              viewBox="0 0 48 48"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <circle
+                cx="24"
+                cy="24"
+                r="23"
+                stroke="#636162"
+                stroke-width="2"
+              />
+              <path
+                d="M30.1406 24.9375C30.5573 25.3438 30.8802 25.8177 31.1094 26.3594C31.349 26.901 31.4688 27.5469 31.4688 28.2969C31.4688 29.9323 30.8438 31.3073 29.5938 32.4219C28.3438 33.526 26.7708 34.1406 24.875 34.2656V38.6719H23.5938V34.2969C21.5312 34.2552 19.8594 33.7656 18.5781 32.8281C17.2969 31.8802 16.6562 30.7083 16.6562 29.3125C16.6562 28.6979 16.7917 28.2292 17.0625 27.9062C17.3333 27.5729 17.7135 27.4062 18.2031 27.4062C18.7552 27.4062 19.1875 27.5469 19.5 27.8281C19.8125 28.099 19.9688 28.4219 19.9688 28.7969C19.9688 29.0781 19.8698 29.5052 19.6719 30.0781C19.474 30.6406 19.349 31.026 19.2969 31.2344C19.599 31.776 20.1198 32.2135 20.8594 32.5469C21.6094 32.8802 22.5208 33.0521 23.5938 33.0625V25.1562C23.1354 24.9896 22.7344 24.8438 22.3906 24.7188C22.0573 24.5938 21.6146 24.4167 21.0625 24.1875C19.8646 23.6979 18.9271 23.0573 18.25 22.2656C17.5729 21.4635 17.2344 20.4271 17.2344 19.1562C17.2344 17.6562 17.8594 16.3906 19.1094 15.3594C20.3594 14.3281 21.8542 13.7969 23.5938 13.7656V10.1875H24.875V13.7656C25.9062 13.7865 26.8177 13.9375 27.6094 14.2188C28.401 14.5 29.0469 14.849 29.5469 15.2656C30.0469 15.6823 30.4219 16.1406 30.6719 16.6406C30.9323 17.1406 31.0625 17.625 31.0625 18.0938C31.0625 18.5625 30.9531 18.9635 30.7344 19.2969C30.5156 19.6198 30.1562 19.7812 29.6562 19.7812C29.1458 19.7812 28.7188 19.651 28.375 19.3906C28.0417 19.1302 27.875 18.8385 27.875 18.5156C27.875 18.1302 27.9167 17.75 28 17.375C28.0833 16.9896 28.1562 16.651 28.2188 16.3594C28.1875 16.2969 28.0833 16.1875 27.9062 16.0312C27.7292 15.8646 27.5208 15.7135 27.2812 15.5781C27.0208 15.4323 26.6771 15.3021 26.25 15.1875C25.8229 15.0729 25.3646 15.0156 24.875 15.0156V22.2656C25.2812 22.4115 25.6198 22.5417 25.8906 22.6562C26.1719 22.7604 26.5156 22.8906 26.9219 23.0469C27.5677 23.2969 28.1615 23.5729 28.7031 23.875C29.2448 24.1667 29.724 24.5208 30.1406 24.9375ZM23.5938 21.8906V15.0156C22.5833 15.0156 21.7344 15.3021 21.0469 15.875C20.3594 16.4479 20.0156 17.151 20.0156 17.9844C20.0156 18.8906 20.2292 19.6146 20.6562 20.1562C21.0833 20.6979 21.7292 21.1458 22.5938 21.5C22.7188 21.5521 22.875 21.6146 23.0625 21.6875C23.25 21.7604 23.4271 21.8281 23.5938 21.8906ZM28.5312 29.5625C28.5312 28.7083 28.3073 27.9688 27.8594 27.3438C27.4219 26.7083 26.6719 26.1823 25.6094 25.7656C25.474 25.7135 25.3438 25.6667 25.2188 25.625C25.1042 25.5833 24.9896 25.5417 24.875 25.5V33.0469C26.0938 32.974 27.0052 32.6302 27.6094 32.0156C28.224 31.3906 28.5312 30.5729 28.5312 29.5625Z"
+                fill="#636162"
+              />
+            </svg>
+
+            Free Appraisal
+            <p>Our best-in-class jewelers can appraise your rocks.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
